# PeakRDL-systemrdl

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
src/peakrdl_systemrdl/: __about__.py  __peakrdl__.py  exporter.py  identifier_filter.py  rdl_generator.py  stringify.py
test/: pylint.rc  run.sh
