[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-systemrdl"
dynamic = ["version"]
requires-python = ">=3.6"
dependencies = [
    "systemrdl-compiler >= 1.25.1, < 2",
]

authors = [
    {name="Alex Mykyta"},
]
description = "Write a register model to a SystemRDL file"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "SystmRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Source = "https://github.com/SystemRDL/PeakRDL-systemrdl"
Tracker = "https://github.com/SystemRDL/PeakRDL-systemrdl/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL-systemrdl/releases"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_systemrdl.__about__.__version__"}

[project.entry-points."peakrdl.exporters"]
systemrdl = "peakrdl_systemrdl.__peakrdl__:ExporterCmd"
